# math-shop

./: Cargo.toml  README.md  coverage.py  test.py
crates/fft-shop/: Cargo.toml
crates/fft-shop/src/: common.rs  cooley_tukey.rs  helper.rs  lib.rs  naive_dft.rs  recursive_radix2_fft.rs  stockham.rs
crates/fft-shop/tests/: common.rs  test_cooley_tukey.rs  test_naive_dft.rs  test_recursive_radix2_fft.rs  test_stockham_fft.rs
crates/refined-float/: Cargo.toml
crates/refined-float/examples/: mandelbrot.rs
crates/refined-float/src/: complex.rs  float32.rs  float64.rs  lib.rs  macros.rs
crates/refined-float/tests/: test_approx.rs  test_arithmetic.rs  test_complex.rs  test_complex_fns.rs
