[package]
authors = ["hhllhhyyds <hhllhhyyds@sina.com>"]
description = "mathematical tools in pure Rust"
keywords = ["math"]
license = "MIT"
name = "math-shop"
readme = "README.md"
repository = "https://github.com/hhllhhyyds/math-shop"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
refined-float = {path = "crates/refined-float"}


[workspace]
members = ["crates/refined-float"]
