[package]
authors = ["hhllhhyyds <hhllhhyyds@sina.com>"]
description = "mathematical tools in pure Rust"
edition = "2021"
keywords = ["math"]
license = "MIT"
name = "math-shop"
readme = "README.md"
repository = "https://github.com/hhllhhyyds/math-shop"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = ["crates/refined-float", "crates/fft-shop"]

[workspace.dependencies]
approx = "0.5.1"
plotters = "0.3.5"
rand = "0.8.5"
