[package]
authors = ["hhllhhyyds <hhllhhyyds@sina.com>"]
description = "mathematical tools in pure Rust"
edition = "2021"
keywords = ["math", "fft", "dft"]
license = "MIT"
name = "fft-shop"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
