[package]
authors = ["hhllhhyyds <hhllhhyyds@sina.com>"]
description = "Implemention of different fft algorithms"
edition = "2021"
keywords = ["math", "fft", "dft"]
license = "MIT"
name = "fft-shop"
repository = "https://github.com/hhllhhyyds/math-shop/tree/main/crates/fft-shop"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
refined-float = {version = "0.2.0", path = "../refined-float", features = ["approx"]}

[dev-dependencies]
approx = {workspace = true}
rand = {workspace = true}
