[package]
authors = ["hhllhhyyds <hhllhhyyds@sina.com>"]
description = "Refined float with a subset of functions of std float"
edition = "2021"
keywords = ["math"]
license = "MIT"
name = "refined-float"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "approx"]
std = []

[dependencies]
approx = {workspace = true, optional = true}
libm = {version = "0.2.8", optional = true}

[dev-dependencies]
plotters = {workspace = true}

[[example]]
name = "mandelbrot"
